[tool.poetry]
name = "repl_python3_BotAmino-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gTTS = "^2.2.3"
JSON_minify = "^0.3.0"
websocket = "^0.2.1"
youtube_dl = "^2021.6.6"
axju-jokes = "^1.0.3"
Flask = "^2.0.2"
pdf2image = "^1.16.0"
amino = "^13.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
